@@ -1,5 +1,9 @@
 [b]Version 0.6.0rc5[/b]:
 
+(2008-04-19)
+ * Don't get info about the files added automatically by the GUI to the 
+   playlist (usually it's the file to play, so it's a waste of time).
+
 (2008-04-18)
  * (Windows) Applied a patch by "hackykid" to fix a link error when compiling with
    Visual Studio.
